--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul class="flex-container">
                 <li>About Me</li>
                 <li>Projects</li>
-                <li>Biography</li>
+                <li>Timeline</li>
                 <li>Contact Me</li>
             </ul>
         </nav>
@@ -201,10 +201,14 @@
                 <li>UX analysis</li>
                 <li>Project management</li>
                 <li>Electronics knowledge</li>
-                <li>General computer hardware</li>
+                <li>General computer hardware knowledge</li>
+                <li>General Web knowledge</li>
                 <li>VHDL</li>
                 <li>Computer Vision</li>
                 <li>Robotics</li>
+                <li>Windows Operating Systems</li>
+                <li>MacOs Operating Systems</li>
+                <li>Bash</li>
             </ul>
         </section>
     </article>
@@ -214,14 +218,20 @@
                 <ul class="wrapper">
                     <li>
                         <a href="#">
-                            <h3 class="project-title">Zee & Co</h3>
-                            <span class="hover-text">WOOP</span>
+                            <div class="main-text">
+                                <h3 class="project-title">Zee & Co</h3>
+                                <p>Inchoo Project</p>
+                            </div>
+                            <div class="description">
+                                <p>WOOP WOOP</p>
+                            </div>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <h3 class="project-title">Zee & Co Blog</h3>
+                            <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -229,6 +239,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">KEH Camera</h3>
+                            <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -236,6 +247,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Inchoo Website</h3>
+                            <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -243,6 +255,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">O'Neills</h3>
+                            <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -250,6 +263,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Hexagonal Melody</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -257,6 +271,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Block Runner Rampage</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -264,6 +279,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Image 2 ASCII</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -271,6 +287,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Omnivision</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -278,6 +295,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Histogram-Based Image Search</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -285,6 +303,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Computer Vision Projects</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -292,6 +311,7 @@
                     <li>
                         <a href="#">
                             <h3 class="project-title">Robotics Projects</h3>
+                            <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
                             <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
                         </a>
@@ -302,19 +322,17 @@
                 </div>
             </section>
     </article>
-    <article class="container-education container" id="education">
+    <article class="container-timeline narrow-container" id="education">
         <section>
-            <h2 class="text-center">Education</h2>
+            <h2 class="text-center">Timeline</h2>
             <div id="cd-timeline" class="cd-container">
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-picture">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Title of section 1</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                        <a href="#0" class="cd-read-more">Read more</a>
-                        <span class="cd-date">Jan 14</span>
+                        <p><b class="cd-date">September 26th 1991</b></p>
+                        <p>Born in Mohacs, Hungary.</p>
                     </div> <!-- cd-timeline-content -->
                 </div> <!-- cd-timeline-block -->
 
@@ -323,7 +341,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Title of section 2</h2>
+                        <h3>Title of section 2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
                         <a href="#0" class="cd-read-more">Read more</a>
                         <span class="cd-date">Jan 18</span>
@@ -335,7 +353,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Title of section 3</h2>
+                        <h3>Title of section 3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
                         <a href="#0" class="cd-read-more">Read more</a>
                         <span class="cd-date">Jan 24</span>
@@ -347,7 +365,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Title of section 4</h2>
+                        <h3>Title of section 4</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
                         <a href="#0" class="cd-read-more">Read more</a>
                         <span class="cd-date">Feb 14</span>
@@ -359,7 +377,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Title of section 5</h2>
+                        <h3>Title of section 5</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
                         <a href="#0" class="cd-read-more">Read more</a>
                         <span class="cd-date">Feb 18</span>
@@ -371,7 +389,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Final Section</h2>
+                        <h3>Final Section</h3>
                         <p>This is the content of the last section</p>
                         <span class="cd-date">Feb 26</span>
                     </div> <!-- cd-timeline-content -->
