--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
+<!--
+Hello fellow Developer,
+
+Thank you for the interest in my code. Many hours of work went into creating this site.
+If you are wondering what kind of magic have I used to create this neat little site, look no further.
+I used HTML5 boilerplate and Echo SASS toolkit which I have created for my team at Inchoo.
+
+Happy coding!
+
+Best regards,
+Adrian Bece
+
+-->
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
@@ -67,7 +80,7 @@
             to various simple games and image-processing software.</p>
         </section>
         <section class="skills-logos">
-            <h3>My Skills And Tools</h3>
+            <h3>Main Skills And Tools</h3>
             <ul class="flex-container">
                 <li>
                     <svg viewBox="0 0 128 128">
@@ -199,13 +212,18 @@
                 <li>Graphic design</li>
                 <li>Technical audits</li>
                 <li>UX analysis</li>
+                <li>SEO</li>
+                <li>HotJar</li>
+                <li>Klevu Search Customization</li>
+                <li>Website Performance Optimization</li>
+                <li>Google Analytics</li>
                 <li>Project management</li>
                 <li>Electronics knowledge</li>
+                <li>Robotics</li>
+                <li>VHDL</li>
                 <li>General computer hardware knowledge</li>
                 <li>General Web knowledge</li>
-                <li>VHDL</li>
                 <li>Computer Vision</li>
-                <li>Robotics</li>
                 <li>Windows Operating Systems</li>
                 <li>MacOs Operating Systems</li>
                 <li>Bash</li>
@@ -225,7 +243,7 @@
                             <div class="description">
                                 <p>WOOP WOOP</p>
                             </div>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-zee.png" width="720" height="420" alt="Project Showcase: Zee & Co"/>
                         </a>
                     </li>
                     <li>
@@ -233,7 +251,7 @@
                             <h3 class="project-title">Zee & Co Blog</h3>
                             <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-zee-blog.png" width="720" height="420" alt="Project Showcase: Zee & Co Blog"/>
                         </a>
                     </li>
                     <li>
@@ -241,7 +259,7 @@
                             <h3 class="project-title">KEH Camera</h3>
                             <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-keh.png" width="720" height="420" alt="Project Showcase: KEH Camera"/>
                         </a>
                     </li>
                     <li>
@@ -249,7 +267,7 @@
                             <h3 class="project-title">Inchoo Website</h3>
                             <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-inchoo.png" width="720" height="420" alt="Project Showcase: Inchoo"/>
                         </a>
                     </li>
                     <li>
@@ -257,7 +275,15 @@
                             <h3 class="project-title">O'Neills</h3>
                             <p>Inchoo Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-oneills.png" width="720" height="420" alt="Project Showcase: Oneills"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Foodly</h3>
+                            <p>Personal Project</p>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-foodly.png" width="720" height="420" alt="Project Showcase: Foodly"/>
                         </a>
                     </li>
                     <li>
@@ -265,7 +291,7 @@
                             <h3 class="project-title">Hexagonal Melody</h3>
                             <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-hex.png" width="720" height="420" alt="Project Showcase: Hexagonal Melody"/>
                         </a>
                     </li>
                     <li>
@@ -273,7 +299,7 @@
                             <h3 class="project-title">Block Runner Rampage</h3>
                             <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-block.png" width="720" height="420" alt="Project Showcase: Block Runner Rampage"/>
                         </a>
                     </li>
                     <li>
@@ -281,7 +307,15 @@
                             <h3 class="project-title">Image 2 ASCII</h3>
                             <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-ascii.png" width="720" height="420" alt="Project Showcase: Image 2 ASCII"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h3 class="project-title">Image To ASCII Web</h3>
+                            <p>Personal Project</p>
+                            <span class="hover-text">WOOP</span>
+                            <img src="./images/project-ascii-web.png" width="720" height="420" alt="Project Showcase: Image 2 ASCII"/>
                         </a>
                     </li>
                     <li>
@@ -289,15 +323,15 @@
                             <h3 class="project-title">Omnivision</h3>
                             <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-omni.png" width="720" height="420" alt="Project Showcase: Omnivision"/>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <h3 class="project-title">Histogram-Based Image Search</h3>
+                            <h3 class="project-title">Histogram-Based Search</h3>
                             <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-search.png" width="720" height="420" alt="Project Showcase: Histogram-Based Image Search"/>
                         </a>
                     </li>
                     <li>
@@ -305,15 +339,7 @@
                             <h3 class="project-title">Computer Vision Projects</h3>
                             <p>Personal Project</p>
                             <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <h3 class="project-title">Robotics Projects</h3>
-                            <p>Personal Project</p>
-                            <span class="hover-text">WOOP</span>
-                            <img src="./images/project-zee.jpg" width="720" height="357" alt="Project Showcase: Zee & Co"/>
+                            <img src="./images/project-vision.png" width="720" height="420" alt="Project Showcase: Computer Vision"/>
                         </a>
                     </li>
                 </ul>
@@ -328,72 +354,74 @@
             <div id="cd-timeline" class="cd-container">
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-picture">
-                    </div> <!-- cd-timeline-img -->
+                    </div>
 
                     <div class="cd-timeline-content">
                         <p><b class="cd-date">September 26th 1991</b></p>
                         <p>Born in Mohacs, Hungary.</p>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
-
-                <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-movie">
-                    </div> <!-- cd-timeline-img -->
-
-                    <div class="cd-timeline-content">
-                        <h3>Title of section 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-                        <a href="#0" class="cd-read-more">Read more</a>
-                        <span class="cd-date">Jan 18</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
+                    </div>
+                </div>
 
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-picture">
-                    </div> <!-- cd-timeline-img -->
+                    </div>
 
                     <div class="cd-timeline-content">
-                        <h3>Title of section 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-                        <a href="#0" class="cd-read-more">Read more</a>
-                        <span class="cd-date">Jan 24</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
+                        <p><b class="cd-date">September 2006</b></p>
+                        <p>Started education at "Elektrotehnička Škola Osijek" high school for the profession of an electrical engineer in the field of electronics.</p>
+                    </div>
+                </div>
 
                 <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-location">
-                    </div> <!-- cd-timeline-img -->
+                    <div class="cd-timeline-img cd-picture">
+                    </div>
 
                     <div class="cd-timeline-content">
-                        <h3>Title of section 4</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                        <a href="#0" class="cd-read-more">Read more</a>
-                        <span class="cd-date">Feb 14</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
+                        <p><b class="cd-date">July 2010</b></p>
+                        <p>Completed the highschool education and started education at Faculty Of Electrical Engineering in Strossmayer University in Osijek.</p>
+                    </div>
+                </div>
 
                 <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-location">
-                    </div> <!-- cd-timeline-img -->
+                    <div class="cd-timeline-img cd-picture">
+                    </div>
 
                     <div class="cd-timeline-content">
-                        <h3>Title of section 5</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-                        <a href="#0" class="cd-read-more">Read more</a>
-                        <span class="cd-date">Feb 18</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
+                        <p><b class="cd-date">April 2015</b></p>
+                        <p>Foodly project made it to the finals of Microsoft's Startup Academy and it was presented at Windays 2015.</p>
+                    </div>
+                </div>
 
                 <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-movie">
-                    </div> <!-- cd-timeline-img -->
+                    <div class="cd-timeline-img cd-picture">
+                    </div>
 
                     <div class="cd-timeline-content">
-                        <h3>Final Section</h3>
-                        <p>This is the content of the last section</p>
-                        <span class="cd-date">Feb 26</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
+                        <p><b class="cd-date">July 2015</b></p>
+                        <p>Started working at Inchoo as a Frontend Developer and eCommerce developer.</p>
+                    </div>
+                </div>
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-picture">
+                    </div>
+
+                    <div class="cd-timeline-content">
+                        <p><b class="cd-date">September 2015</b></p>
+                        <p>Got a Master's degree in Computer Engineering at Faculty of Electrical Engineering in Osijek and completed my education.</p>
+                    </div>
+                </div>
+
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-picture">
+                    </div>
+
+                    <div class="cd-timeline-content">
+                        <p><b class="cd-date">November 2016</b></p>
+                        <p>Attended a Magento certification exam and became a Certified Magento Frontend developer.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
