Initial styles and HTML

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
           content="My name is Adrian Bece. I am a Frontend Developer specializing in eCommerce. I am currently working at Inchoo - a full service eCommerce agency. This website contains info about me, my bio, my CV and projects I've worked on.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./images/favicons/apple-touch-icon-57x57.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./images/favicons/apple-touch-icon-114x114.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./images/favicons/apple-touch-icon-72x72.png"/>
@@ -29,16 +28,130 @@
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png"/>
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png"/>
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko" rel="stylesheet">
 </head>
 <body>
-<header>
-
+<header class="container-flex">
+    <ul class="container-flex">
+        <li>Home</li>
+        <li>About</li>
+        <li>Work</li>
+        <li>Contact</li>
+    </ul>
+    <ul class="container-flex social-media-links">
+        <li>Twitter</li>
+        <li>LinkedIn</li>
+        <li>GitHub</li>
+        <li>Mail</li>
+    </ul>
 </header>
 <main>
-
+    <section class="container-flex container-hero">
+        <article>
+            <h1>ADRIAN BECE</h1>
+            <ul>
+                <li>Frontend Developer</li>
+                <li>Certified Magento Developer</li>
+                <li>Loves Rock and Metal Music</li>
+                <li>Reads Sci-fi Books</li>
+                <li>Adores Calvin & Hobbes Comics</li>
+                <li>Aspiring Air Pistol Marksman</li>
+            </ul>
+            <a href="#">Read My CV ►</a>
+        </article>
+        <article class="image-container">
+            <div></div>
+            <img src="images/hero/hero-image-d1x.png" alt="Adrian Bece Photo"/>
+        </article>
+    </section>
+    <section>
+        <article>
+            <p>
+                Hi, my name is Adrian. I’m passionate about creating beautiful and functional websites and I focus on
+                writing clean and efficient code.
+            </p>
+        </article>
+    </section>
+    <section class="container-flex">
+        <article><span>Icon</span><h3>Column 1</h3><div>Content</div></article>
+        <article><span>Icon</span><h3>Column 2</h3><div>Content</div></article>
+        <article><span>Icon</span><h3>Column 3</h3><div>Content</div></article>
+        <article><span>Icon</span><h3>Column 4</h3><div>Content</div></article>
+    </section>
+    <section>
+        <article>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </article>
+        <article>
+            <h2>About me</h2>
+            <p>My name is Adrian Bece. I am a Frontend Web Developer specializing in eCommerce. I am currently working at Inchoo - a full service eCommerce agency. I live in Osijek, Croatia. I graduated at Faculty of Electrical Engineering in Osijek in 2015 where I've earned the Master's degree in computer science. In 2016 I have became a Certified Magento Frontend Developer.</p>
+            <p>I have worked at several notable projects for high-profile clients while working at Inchoo. So far, I've worked with Magento 1, Magento 2 and Wordpress. Previously, I have worked on several notable personal projects ranging from website specializing of ordering customized pizza to various simple games and image-processing software.</p>
+        </article>
+    </section>
+    <section>
+        <h2>Featured Professional Work And Personal Projects</h2>
+        <article>
+            <div></div>
+        </article>
+        <article>
+            <a href="#"></a>
+        </article>
+    </section>
 </main>
-<footer class="text-center">
-
+<footer >
+    <div class="container-flex">
+        <div>
+            <h2>Get In Touch</h2>
+            <ul>
+                <li>LinkedIn</li>
+                <li>Twitter</li>
+                <li>GitHub</li>
+                <li>Email</li>
+                <li>Inchoo Blog</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Get In Touch</h2>
+            <ul>
+                <li>LinkedIn</li>
+                <li>Twitter</li>
+                <li>GitHub</li>
+                <li>Email</li>
+                <li>Inchoo Blog</li>
+            </ul>
+        </div>
+        <div>
+            <h2>My Latest Articles</h2>
+            <ul>
+                <li>LinkedIn</li>
+                <li>Twitter</li>
+                <li>GitHub</li>
+                <li>Email</li>
+                <li>Inchoo Blog</li>
+            </ul>
+        </div>
+        <div>
+            <h2>My Latest Articles</h2>
+            <ul>
+                <li>LinkedIn</li>
+                <li>Twitter</li>
+                <li>GitHub</li>
+                <li>Email</li>
+                <li>Inchoo Blog</li>
+            </ul>
+        </div>
+    </div>
+    <div>
+        <div>
+            Designed and made with <3 by Adrian Bece
+        </div>
+        <div>
+            Created using HTML, CSS, Sass, JS.
+        </div>
+    </div>
 </footer>
 <script src=""></script>
 <script src=""></script>
