Revamp header & hero image

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 <body>
 <header class="container-flex">
     <ul class="container-flex">
-        <li>Home</li>
-        <li>About</li>
-        <li>Work</li>
-        <li>Contact</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
     <ul class="container-flex social-media-links">
-        <li>Twitter</li>
-        <li>LinkedIn</li>
-        <li>GitHub</li>
-        <li>Mail</li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">Mail</a></li>
     </ul>
 </header>
 <main>
@@ -57,7 +57,7 @@
                 <li>Adores Calvin & Hobbes Comics</li>
                 <li>Aspiring Air Pistol Marksman</li>
             </ul>
-            <a href="#">Read My CV ►</a>
+            <a class="button" href="#">Read My CV <span class="icon">►</span></a>
         </article>
         <article class="image-container">
             <div></div>
@@ -73,10 +73,22 @@
         </article>
     </section>
     <section class="container-flex">
-        <article><span>Icon</span><h3>Column 1</h3><div>Content</div></article>
-        <article><span>Icon</span><h3>Column 2</h3><div>Content</div></article>
-        <article><span>Icon</span><h3>Column 3</h3><div>Content</div></article>
-        <article><span>Icon</span><h3>Column 4</h3><div>Content</div></article>
+        <article><span>Icon</span>
+            <h3>Column 1</h3>
+            <div>Content</div>
+        </article>
+        <article><span>Icon</span>
+            <h3>Column 2</h3>
+            <div>Content</div>
+        </article>
+        <article><span>Icon</span>
+            <h3>Column 3</h3>
+            <div>Content</div>
+        </article>
+        <article><span>Icon</span>
+            <h3>Column 4</h3>
+            <div>Content</div>
+        </article>
     </section>
     <section>
         <article>
@@ -87,8 +99,14 @@
         </article>
         <article>
             <h2>About me</h2>
-            <p>My name is Adrian Bece. I am a Frontend Web Developer specializing in eCommerce. I am currently working at Inchoo - a full service eCommerce agency. I live in Osijek, Croatia. I graduated at Faculty of Electrical Engineering in Osijek in 2015 where I've earned the Master's degree in computer science. In 2016 I have became a Certified Magento Frontend Developer.</p>
-            <p>I have worked at several notable projects for high-profile clients while working at Inchoo. So far, I've worked with Magento 1, Magento 2 and Wordpress. Previously, I have worked on several notable personal projects ranging from website specializing of ordering customized pizza to various simple games and image-processing software.</p>
+            <p>My name is Adrian Bece. I am a Frontend Web Developer specializing in eCommerce. I am currently working
+                at Inchoo - a full service eCommerce agency. I live in Osijek, Croatia. I graduated at Faculty of
+                Electrical Engineering in Osijek in 2015 where I've earned the Master's degree in computer science. In
+                2016 I have became a Certified Magento Frontend Developer.</p>
+            <p>I have worked at several notable projects for high-profile clients while working at Inchoo. So far, I've
+                worked with Magento 1, Magento 2 and Wordpress. Previously, I have worked on several notable personal
+                projects ranging from website specializing of ordering customized pizza to various simple games and
+                image-processing software.</p>
         </article>
     </section>
     <section>
@@ -101,7 +119,7 @@
         </article>
     </section>
 </main>
-<footer >
+<footer>
     <div class="container-flex">
         <div>
             <h2>Get In Touch</h2>
