WIP Hero subtitle

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             <img src="images/hero/hero-image-d1x.png" alt="Adrian Bece Photo"/>
         </article>
     </section>
-    <section>
-        <article>
+    <section class="container-secondary container-pattern">
+        <article class="container-subtitle">
             <p>
-                Hi, my name is Adrian. I’m passionate about creating beautiful and functional websites and I focus on
-                writing clean and efficient code.
+                Hi, my name is Adrian. I’m passionate about creating <strong>beautiful</strong> and <strong>functional</strong> websites and I focus on
+                writing <strong>clean</strong> and <strong>efficient</strong> code.
             </p>
         </article>
     </section>
